config/apps/db.all.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: smart-home-db
  namespace: smart-home
spec:
  selector:
    matchLabels:
      app: smart-home-db
  serviceName: smart-home-db 
  replicas: 1
  template:
    metadata:
      labels:
        app: smart-home-db
    spec:
      containers:
      - name: smart-home-db
        image: localhost:32000/smarthome-db:0.8
        ports:
          - containerPort: 5432
        volumeMounts:
          - mountPath: /var/lib/postgresql/data
            name: postgredb
        livenessProbe:
          exec:
            command: ["psql", "-U", "postgres", "-d", "pi", "-c", "SELECT 1"]
          initialDelaySeconds: 30
          timeoutSeconds: 5
        readinessProbe:
          exec:
            # Check we can execute queries over TCP (skip-networking is off).
            command: ["psql", "-U", "postgres", "-d", "pi", "-c", "SELECT 1"]
          initialDelaySeconds: 15
          timeoutSeconds: 2
      volumes:
        - name: postgredb
          persistentVolumeClaim:
            claimName: postgres-pv-claim
---
kind: Service
apiVersion: v1
metadata:
  name: smart-home-db
  namespace: smart-home
  labels:
    k8s-app: smart-home-db
spec:
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
      nodePort: 31575
  selector:
    k8s-app: smart-home-db
  type: NodePort
  sessionAffinity: None
  externalTrafficPolicy: Cluster
